--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -1,7 +1,7 @@
 ---
 - name: install mysql
   apt: pkg={{ item }} state=latest
-  sudo: yes
+  become: yes
   with_items:
     - python-mysqldb
     - mysql-server-core-5.6
@@ -10,19 +10,19 @@
     - libmysqlclient-dev
 
 - name: ensure mysql is running and starts on boot
-  sudo: yes
+  become: yes
   service: name=mysql state=started enabled=true
 
 - name: update mysql root password for all root accounts
-  sudo: yes
+  become: yes
   mysql_user: name=root host=localhost password={{ root_db_password }}
 
 - name: copy .my.cnf file with root password credentials
-  sudo: yes
+  become: yes
   template: src=templates/root/.my.cnf dest=/root/.my.cnf owner=root mode=0600
 
 - name: update mysql root password for all root accounts
-  sudo: yes
+  become: yes
   mysql_user: name=root host={{ item }} password={{ root_db_password }}
   with_items:
     - "{{ ansible_hostname }}"
@@ -30,12 +30,12 @@
     - ::1
 
 - name: ensure anonymous users are not in the database
-  sudo: yes
+  become: yes
   mysql_user: name='' host={{ item }} state=absent
   with_items:
     - localhost
     - "{{ inventory_hostname }}"
 
 - name: remove the test database
-  sudo: yes
+  become: yes
   mysql_db: name=test state=absent
