--- a/playbook.yml
+++ b/playbook.yml
@@ -2,28 +2,34 @@
 - hosts: all
   vars:
     ruby: ruby-2.3.1
-    db_user: vagrant
+    db_user: ubuntu
     root_db_password: password
-    project_user: vagrant
-    project_root: "/vagrant"
+    project_user: ubuntu
+    project_root: "/ubuntu"
     project_path: "{{ project_root }}"
-    host_user: vagrant
+    host_user: ubuntu
     rvm_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby }}/bin:/home/{{ host_user }}/.rvm/gems/{{ ruby }}@global/bin:/home/{{ host_user }}/.rvm/rubies/{{ ruby }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/{{ host_user }}/.rvm/bin:/home/{{ host_user }}/.rvm/bin"
     gem_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby }}:/home/{{ host_user }}/.rvm/gems/{{ ruby }}@global"
+    redis_port: 6379
+    redis_password: secret
   tasks:
     - name: make sure the system encoding is utf-8
-      sudo: yes
-      template: src=templates/locale dest=/etc/default/locale
-                owner=root group=root mode=644
+      become: yes
+      template:
+        src: templates/locale
+        dest: /etc/default/locale
+        owner: root
+        group: root
+        mode: 0644
 
     - include: tasks/apt.yml
     - include: tasks/oh-my-zshell.yml
-    - include: tasks/node.yml
+    # - include: tasks/node.yml
     # - include: tasks/ember.yml
-    # - include: tasks/mysql.yml
-    # - include: tasks/postgresql.yml
     # - include: tasks/ruby.yml
     # - include: tasks/finetune.yml
     # - include: tasks/application.yml
     # - include: tasks/puma.yml
-    # - include: tasks/nginx.yml
+    - include: tasks/java.yml
+    - include: tasks/postgresql.yml
+    - include: tasks/redis.yml
