--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -1,11 +1,11 @@
 ---
 - name: update apt
   apt: update_cache=yes
-  sudo: yes
+  become: yes
 
 - name: install base packages
   apt: pkg={{ item }} state=latest
-  sudo: yes
+  become: yes
   with_items:
     - git-core
     - curl
