--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy Nginx configuration file
-  sudo: yes
+  become: yes
   template:
     src: "../templates/nginx.conf"
     dest: /etc/nginx/sites-available/default
