--- a/playbook.yml
+++ b/playbook.yml
@@ -1,15 +1,15 @@
 ---
 - hosts: all
   vars:
-    ruby: ruby-2.3.1
+    ruby_version: ruby-2.3.4
     db_user: ubuntu
     root_db_password: password
     project_user: ubuntu
     project_root: "/ubuntu"
     project_path: "{{ project_root }}"
     host_user: ubuntu
-    rvm_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby }}/bin:/home/{{ host_user }}/.rvm/gems/{{ ruby }}@global/bin:/home/{{ host_user }}/.rvm/rubies/{{ ruby }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/{{ host_user }}/.rvm/bin:/home/{{ host_user }}/.rvm/bin"
-    gem_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby }}:/home/{{ host_user }}/.rvm/gems/{{ ruby }}@global"
+    rvm_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby_version }}/bin:/home/{{ host_user }}/.rvm/gems/{{ ruby_version }}@global/bin:/home/{{ host_user }}/.rvm/rubies/{{ ruby_version }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/{{ host_user }}/.rvm/bin:/home/{{ host_user }}/.rvm/bin"
+    gem_path: "/home/{{ host_user }}/.rvm/gems/{{ ruby_version }}:/home/{{ host_user }}/.rvm/gems/{{ ruby_version }}@global"
     redis_port: 6379
     redis_password: secret
     rabbitmq_username: user2
@@ -26,12 +26,9 @@
 
     - include: tasks/apt.yml
     - include: tasks/oh-my-zshell.yml
-    # - include: tasks/node.yml
-    # - include: tasks/ember.yml
-    # - include: tasks/ruby.yml
-    # - include: tasks/finetune.yml
-    # - include: tasks/application.yml
-    # - include: tasks/puma.yml
+    - include: tasks/finetune.yml
+    - include: tasks/ruby.yml
+    - include: tasks/mailcatcher.yml
     - include: tasks/java.yml
     - include: tasks/postgresql.yml
     - include: tasks/redis.yml
