--- a/tasks/finetune.yml
+++ b/tasks/finetune.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: create symlink of /vagrant folder
+- name: create symlink of user folder
   file:
-    src: /vagrant
-    dest: "{{ project_root }}"
+    src: /'{{ host_user }}'
+    dest: '{{ project_root }}'
     state: link
   ignore_errors: yes
 
 - name: start at Projects folder
-  shell: echo "cd {{ project_root }}" >> ~/.zshrc
+  shell: echo 'cd {{ project_root }}' >> ~/.zshrc
