--- a/tasks/ruby.yml
+++ b/tasks/ruby.yml
@@ -13,4 +13,4 @@
   shell: \curl -L https://get.rvm.io | bash -s stable --autolibs=3 creates=~/.rvm
 
 - name: install ruby
-  shell: ~/.rvm/bin/rvm install --default {{ ruby }} creates=~/.rvm/rubies/{{ ruby }}
+  shell: ~/.rvm/bin/rvm install --default {{ ruby_version }} creates=~/.rvm/rubies/{{ ruby_version }}
