--- a/tasks/postgresql.yml
+++ b/tasks/postgresql.yml
@@ -1,14 +1,20 @@
+# https://www.commandprompt.com/blog/managing_pg_hbaconf_with_ansible/
+# https://medium.com/coding-blocks/creating-user-database-and-adding-access-on-postgresql-8bfcd2f4a91e
 ---
 - name: Add Postgres Repo
   become: yes
-  apt_repository: repo='deb https://apt.postgresql.org/pub/repos/apt/ precise-pgdg main' state=present
+  apt_repository:
+    repo: 'deb https://apt.postgresql.org/pub/repos/apt/ precise-pgdg main'
+    state: present
 
 - name: add postgres trusted key
   become: yes
-  apt_key: url=https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc state=present
+  apt_key:
+    url: https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc
+    state: present
 
 - name: Install Postgresql 9.5
-  apt: pkg={{ item }} state=latest
+  apt: pkg={{ item }} allow_unauthenticated=yes
   become: yes
   with_items:
     - postgresql-common
@@ -23,12 +29,35 @@
     name: postgresql
     state: started
 
-- name: Create Local User on Postgresql
+- name: Create user database application
+  become: yes
   become_user: postgres
-  shell: createuser {{ db_user }} -s
-  ignore_errors: yes
+  postgresql_user:
+    name: "{{ db_user }}"
+    password: "{{ db_password }}"
+
+# - name: Create database application
+#   become: yes
+#   become_user: postgres
+#   postgresql_db:
+#     name: "{{ app_database_name }}"
+#     owner: "{{ db_user }}"
+
+- name: Enables password authentication method
+  become: yes
+  replace:
+    dest: /etc/postgresql/9.5/main/pg_hba.conf
+    regexp: "^local\\s*all\\s*all\\s*peer$"
+    replace: "local   all             all            md5"
+
+- name: Reloads Postgres
+  become: yes
+  service:
+    name: postgresql
+    state: reloaded
 
 ############################################################
+# sudo update-rc.d postgresql enable
 #### Postgresql remote acces for development mode
 # $ sudo vim /etc/postgresql/9.5/main/postgresql.conf
 ## listen_addresses = '*'
