--- a/tasks/ruby.yml
+++ b/tasks/ruby.yml
@@ -7,10 +7,10 @@
     force: yes
 
 - name: download gpg key for rvm
-  shell: gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D39DC0E3
+  shell: gpg --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
 
 - name: install rvm
-  shell: \curl -L https://get.rvm.io | bash -s stable --autolibs=3 creates=~/.rvm
+  shell: \curl -L https://get.rvm.io | bash -s stable
 
 - name: install ruby
   shell: ~/.rvm/bin/rvm install --default {{ ruby_version }} creates=~/.rvm/rubies/{{ ruby_version }}
